Reverted to Running Version...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <uses-feature android:name="android.hardware.location.network" />
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.wifi" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -32,8 +32,8 @@
         </activity>
         <activity android:name=".gpslocation.ActivityGPSCompass" >
         </activity>
-        <activity android:name=".gpslocation.SimplestMapViewer" >
-        </activity>
+        <!--<activity android:name=".gpslocation.SimplestMapViewer" >-->
+        <!--</activity>-->
         <activity android:name=".comments.TT_CommentsFoundActivity" >
         </activity>
         <activity android:name=".routes.TT_RouteFoundActivity" >
@@ -46,6 +46,5 @@
         </activity>
         <activity android:name=".summit.TT_SummitsFoundActivity" >
         </activity>
-        <activity android:name=".MainActivity" />
-    </application>
+        </application>
 </manifest>
