--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.0'
-    ext.kotlin_version = '1.2.61'
-
-
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+//        // Add the Crashlytics repositories and dependency to your project-level build.gradle file:
+//        // @see https://firebase.google.com/docs/crashlytics/get-started?authuser=0
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.google.gms:google-services:4.1.0' // google-services plugin
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-
+        classpath 'com.android.tools.build:gradle:4.2.2'
+        // Check for v3.1.2 or higher
+        classpath 'com.google.gms:google-services:4.3.8'
+        // For Android Studio 3.0, use firebase-plugins version 1.1.5
+        classpath 'com.google.firebase:firebase-plugins:2.0.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        // Add the Crashlytics repositories and dependency to your project-level build.gradle file:
+        // Add dependency
     }
 }
 
@@ -28,12 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+//        // Add the Crashlytics repositories and dependency to your project-level build.gradle file:
         maven {
             url 'https://maven.google.com/'
         }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
