--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,46 +1,81 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+//apply plugin: 'io.fabric'
+
 
 android {
-    compileSdkVersion 27
-    defaultConfig {
-        applicationId "com.teufelsturm.tt_downloaderand_kotlin"
-        minSdkVersion 14
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//    dataBinding {
+//        enabled = true
+//    }
+    signingConfigs {
+        config {
+            keyAlias 'key'
+            keyPassword 'TT_DownLoaded'
+            storeFile file('S:/Programming/git/TT_DownLoaderAND_Kotlin/KeyStore_TTDownLoaded.jks')
+            storePassword 'TT_DownLoaded'
         }
     }
+    compileSdkVersion 30
+    buildToolsVersion '28.0.3'
+    defaultConfig {
+        applicationId "com.teufelsturm.tt_downloader3"
+        minSdkVersion 16
+        targetSdkVersion 30
+        versionCode 117                                        // <----- Version to be changed here!
+        versionName "0." + defaultConfig.versionCode.intdiv(100) + "." + defaultConfig.versionCode % 100
+        setProperty("archivesBaseName", "TT_DownLoaded" + "-v" + versionCode + "_[" + versionName + "]_")
+        // FIX FOR: Error: Cannot fit requested classes in a single dex file (# methods: 97493 > 65536)
+        multiDexEnabled true
+        signingConfig signingConfigs.config
+    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.config
+        }
+        release {
+            signingConfig signingConfigs.config
+        }
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+    productFlavors {
+    }
+}
+
+configurations {
+    cleanedAnnotations
+    compile.exclude group: 'org.jetbrains', module: 'annotations'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'org.mapsforge:mapsforge-core:0.9.1'
-    implementation 'org.mapsforge:mapsforge-map:0.9.1'
-    implementation 'org.mapsforge:mapsforge-map-reader:0.9.1'
-    implementation 'org.mapsforge:mapsforge-themes:0.9.1'
-    implementation 'org.mapsforge:mapsforge-map-android:0.9.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.4.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 
-    implementation 'com.caverock:androidsvg:1.2.2-beta-1'
-    implementation 'org.mapsforge:mapsforge-poi-android:0.9.1'
-    implementation 'org.mapsforge:spatialite-android:0.9.1'
-    implementation 'org.mapsforge:spatialite-android:0.9.1:natives-armeabi'
-    implementation 'org.mapsforge:spatialite-android:0.9.1:natives-armeabi-v7a'
-    implementation 'org.mapsforge:spatialite-android:0.9.1:natives-x86'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
-    implementation 'net.sf.kxml:kxml2:2.3.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+
+    // Add the Firebase Admin SDK to your app:
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.room:room-runtime:2.4.0-alpha02"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
+
 repositories {
     mavenCentral()
 }
+apply plugin: 'com.google.gms.google-services'
