--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     defaultConfig {
         applicationId "de.teufelsturm.tt_downloader_ktx"
         minSdkVersion 21
-        targetSdkVersion 31
-        versionCode 2
-        versionName "2.0"
+        targetSdkVersion 33
+        versionCode 5
+        versionName "0." + defaultConfig.versionCode.intdiv(10) + "." + defaultConfig.versionCode % 10
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled = true
@@ -50,21 +50,21 @@ kapt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Support libraries
-    implementation "androidx.appcompat:appcompat:1.4.1"
-    implementation "androidx.fragment:fragment-ktx:1.4.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     // Android KTX
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     // Room and Lifecycle dependencies
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
@@ -72,7 +72,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
     // Material Design
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
     // CardView
     implementation "androidx.cardview:cardview:1.0.0"
 
@@ -83,7 +83,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Activity KTX for viewModels()
-    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation "androidx.activity:activity-ktx:1.6.0"
 
     // multiDexEnabled
     implementation 'com.android.support:multidex:1.0.3'
